<resources>
    <string name="app_name">Etilico</string>
    <string name="titulo_yo_nunca">Yo nunca</string>
    <string name="titulo_pruebas">Pruebas</string>
    <string name="titulo_ayuda">Ayuda</string>
    <string name="titulo_carrera">Carrera</string>
    <string name="modo_yo_nunca">YO NUNCA</string>
    <string name="modo_el_juego">EL JUEGO</string>
    <string name="modo_autopista">AUTOPISTA</string>
    <string name="modo_pingo">PINGO</string>
    <string name="modo_ayuda">AYUDA</string>
        <string name="pingo_boton_siguiente">SIGUIENTE</string>
        <string name="pingo_boton_como_jugar">COMO JUGAR</string>
        <string name="pingo_text_view">INICIO</string>
        <string name="pingo_text_view_fin_de_juego">FIN DEL JUEGO</string>
        <string name="pingo_fin_de_juego_texto">Fin del PINGO. ¿Quieres jugar de nuevo?</string>
        <string name="pingo_fin_de_juego_boton_si">Si</string>
        <string name="pingo_fin_de_juego_boton_no">No</string>
        <string name="pingo_fin_de_juego_titulo">FIN DEL JUEGO</string>
        <string name="pingo_como_jugar_texto_0">Juego por turnos. Los jugadores deben colocarse formando un circulo. En cada turno, un jugador saca carta (pulsando siguiente), cada carta corresponde a una prueba, se deberá realizar la prueba y pasar el turno al siguiente jugador cuando se haya completado.Las pruebas son:</string>
        <string name="pingo_como_jugar_texto_1">1-Chupito- El jugador que saca esta carta deberá beber un chupito.</string>
        <string name="pingo_como_jugar_texto_2">2-Bebes dos tragos- El jugador que saca esta carta deberá beber 2 tragos de su copa.</string>
        <string name="pingo_como_jugar_texto_3">3-Reparte 3 tragos- el jugador que saca esta carta reparte tres tragos a quien quiera (puede mandar los 3 tragos a un jugador, 2 tragos a uno y 1 trago a otro o 1 trago a tres jugadores distintos).</string>
        <string name="pingo_como_jugar_texto_4">4-1,2,3,4- El jugador que saca la carta bebe un trago, el siguiente jugador de su derecha 2 tragos, el siguiente 3 tragos y el siguiente 4 tragos.</string>
        <string name="pingo_como_jugar_texto_5">5-Cascada-El jugador que saca la carta tiene que empezar a beber y los demás tienen que seguir en el orden en el que están sentados hasta el último jugador. Cuando el primer jugador deja de beber, todos los demás tienen que dejar de beber de nuevo siguiendo el orden en que están sentados.</string>
        <string name="pingo_como_jugar_texto_6">6- Canciones. El jugador que saca esta carta deberá cantar un verso de una canción que elija, el resto de jugadores (por orden) deberán continuar la canción, el que falle o no sepa seguir, pierde y bebe un trago.</string>
        <string name="pingo_como_jugar_texto_7">7-Marcas/listas. El jugador que saca esta carta deberá elegir entre Marcas o listas de un determinado tema (por ejemplo: marcas de coche, marcas de bebidas alcohólicas, Pokémon, Actores/Actrices...), por orden cada jugador deberá ir diciendo una marca/lista de dicho tema, el jugador que repita o no se sepa ninguna pierde y bebe un trago.</string>
        <string name="pingo_como_jugar_texto_8">8-Beben todos menos tu- Todos los jugadores deberán beber un trago a excepción del jugador que saco la carta.</string>
        <string name="pingo_como_jugar_texto_9">9-Bebes del vaso de todos- El jugador que saca esta carta bebe un trago del vaso de todos los jugadores.</string>
        <string name="pingo_como_jugar_texto_10">10-Bebe el de tu izquierda- Bebe un trago la persona que este a la izquierda del jugador que saco la carta.</string>
        <string name="pingo_como_jugar_texto_11">11-Bebe el de tu derecha- Bebe un trago la persona que este a la derecha del jugador  que saco la carta.</string>
        <string name="pingo_como_jugar_texto_12">12- Rellena/Bebe copa central- Hay en total cuatro 12 en la baraja, los 3 primeros deberán rellenar con su bebida una copa situada en el centro, el ultimo 12 deberá beberse la copa con la mezcla de bebidas.</string>
        <string name="pingo_como_jugar_boton_ok">OK</string>
        <string name="pingo_como_jugar_titulo">COMO JUGAR PINGO</string>
        <string name="pingo_prueba_1">BEBE UN CHUPITO</string>
        <string name="pingo_prueba_2">BEBE DOS TRAGOS</string>
        <string name="pingo_prueba_3">REPARTE 3 TRAGOS</string>
        <string name="pingo_prueba_4">1,2,3,4</string>
        <string name="pingo_prueba_5">CASCADA</string>
        <string name="pingo_prueba_6">CANCIONES</string>
        <string name="pingo_prueba_7">MARCAS/LISTAS</string>
        <string name="pingo_prueba_8">BEBEN TODOS MENOS TU</string>
        <string name="pingo_prueba_9">BEBES DEL VASO DE TODOS</string>
        <string name="pingo_prueba_10">BEBE EL DE TU IZQUIERDA</string>
        <string name="pingo_prueba_11">BEBE EL DE TU DERECHA</string>
        <string name="pingo_prueba_12">RELLENA/BEBE COPA CENTRAL</string>
        <string name="yo_nunca_modo_clasico">CLASICO</string>
        <string name="yo_nunca_modo_erotico">EROTICO</string>
        <string name="yo_nunca_boton_siguiente">SIGUIENTE</string>
        <string name="yo_nunca_boton_como_jugar">Como jugar</string>
        <string name="yo_nunca_boton_sugerencia">Sugerencia</string>
        <string name="yo_nunca_titulo">YO NUNCA...</string>
        <string name="yo_nunca_como_jugar_texto">YO NUNCA. Apareceran afirmaciones en la pantalla,
                     el jugador debera beber un trago si la afirmacion es verdadera para el.
                     En el boton SUGERENCIA encontrarás los pasos para enviarnos afirmaciones para incluirlas en el juego</string>
        <string name="yo_nunca_como_jugar_boton_ok">OK</string>
        <string name="yo_nunca_como_jugar_titulo">COMO JUGAR YO NUNCA</string>
        <string name="yo_nunca_fin_de_juego_texto">Fin del YO NUNCA. ¿Quieres jugar de nuevo?</string>
        <string name="yo_nunca_fin_de_juego_boton_si">Si</string>
        <string name="yo_nunca_fin_de_juego_boton_no">No</string>
        <string name="yo_nunca_fin_de_juego_titulo">FIN DEL JUEGO</string>
        <string name="yo_nunca_clasico_afirmacion_0">Yo nunca he dejado caer mi móvil al WC.</string>
        <string name="yo_nunca_clasico_afirmacion_1">Yo nunca he vuelto con mi ex.</string>
        <string name="yo_nunca_clasico_afirmacion_2">Yo nunca me he tirado un pedo y he dicho “que mal huele” para despistar.</string>
        <string name="yo_nunca_clasico_afirmacion_3">Yo nunca he dicho que me encantaba un regalo y después lo he devuelto.</string>
        <string name="yo_nunca_clasico_afirmacion_4">Yo nunca he tenido una época vegana/vegetariana y se lo he dicho a todo el mundo.</string>
        <string name="yo_nunca_clasico_afirmacion_5">Yo nunca he visto una serie solo por ver en bucle el culo del actor.</string>
        <string name="yo_nunca_clasico_afirmacion_6">Yo nunca he fingido estar en un videoclip cuando salgo de la ducha mientras pongo caras intensas en el espejo.</string>
        <string name="yo_nunca_clasico_afirmacion_7">Yo nunca he hecho un spoiler de Juego de Tronos.</string>
        <string name="yo_nunca_clasico_afirmacion_8">Yo nunca he hecho pis en una piscina con miedo por si aparecía el circulo rojo.</string>
        <string name="yo_nunca_clasico_afirmacion_9">Yo nunca he fingido que me llamaban para escapar de una cita.</string>
        <string name="yo_nunca_clasico_afirmacion_10">Yo nunca he estado más de tres días sin ducharme.</string>
        <string name="yo_nunca_clasico_afirmacion_11">Yo nunca me he apuntado al gimnasio pero no he ido mas de dos veces.</string>
        <string name="yo_nunca_clasico_afirmacion_12">Yo nunca he stalkeado el instagram del el/la ex de mi novi@.</string>
        <string name="yo_nunca_clasico_afirmacion_13">Yo nunca me he inventado algo en una entrevista de trabajo.</string>
        <string name="yo_nunca_clasico_afirmacion_14">Yo nunca he dicho "de tranquis" para convencer un amigo y salir de fiesta.</string>
        <string name="yo_nunca_clasico_afirmacion_15">Yo nunca he abierto a la policía por haber hecho un fiestón en casa.</string>
        <string name="yo_nunca_clasico_afirmacion_16">Yo nunca me he imaginado siendo del sexo opuesto.</string>
        <string name="yo_nunca_clasico_afirmacion_17">Yo nunca me he pasado mi parada del tren volviendo de fiesta y he acabao en otra ciudad.</string>
        <string name="yo_nunca_clasico_afirmacion_18">Yo nunca he  perdido un iPhone.</string>
        <string name="yo_nunca_clasico_afirmacion_19">Yo nunca he llevado unas gafas de cristal solo por posturear.</string>
        <string name="yo_nunca_clasico_afirmacion_20">Yo nunca he pesado la fruta, le he pegado el ticket y luego he metido más.</string>
        <string name="yo_nunca_clasico_afirmacion_21">Yo nunca mentí en el Yo Nunca.</string>
        <string name="yo_nunca_clasico_afirmacion_22">Yo nunca he estornudado y me ha salido un moco.</string>
        <string name="yo_nunca_clasico_afirmacion_23">Yo nunca he preguntado a alguien que no trabajaba en una tienda si tenía mi talla.</string>
        <string name="yo_nunca_clasico_afirmacion_24">Yo nunca he indicado mal un camino cuando me han preguntado.</string>
        <string name="yo_nunca_clasico_afirmacion_25">Yo nunca he olido mi propio pedo.</string>
        <string name="yo_nunca_clasico_afirmacion_26">Yo nunca he movido la boca aunque no me sepa la canción.</string>
        <string name="yo_nunca_clasico_afirmacion_27">Yo nunca he intentado mover cosas con la mente (sin resultado).</string>
        <string name="yo_nunca_clasico_afirmacion_28">Yo nunca he tonteado con el novio de un amig@.</string>
        <string name="yo_nunca_clasico_afirmacion_29">Yo nunca he cotilleado a quién daba like mis exparejas.</string>
        <string name="yo_nunca_clasico_afirmacion_30">Yo nunca he mirado el papel después de ir al baño.</string>
        <string name="yo_nunca_clasico_afirmacion_31">Yo nunca me he creído Mr Robot al instalar un programa pirata.</string>
        <string name="yo_nunca_clasico_afirmacion_32">Yo nunca he mandado un audio subidito de tono a mi madre por error.</string>
        <string name="yo_nunca_clasico_afirmacion_33">Yo nunca he llorado en una película de Disney.</string>
        <string name="yo_nunca_clasico_afirmacion_34">Yo nunca bailé el “Gangnam Style”.</string>
        <string name="yo_nunca_clasico_afirmacion_35">Yo nunca he googleado mi nombre para ver qué aparece.</string>
        <string name="yo_nunca_clasico_afirmacion_36">Yo nunca he tenido un mote.</string>
        <string name="yo_nunca_clasico_afirmacion_37">Yo nunca he hecho una locura por amor.</string>
        <string name="el_juego_boton_siguiente">SIGUIENTE</string>
        <string name="el_juego_boton_sugerencia">SUGERENCIA</string>
        <string name="el_juego_boton_como_jugar">COMO JUGAR</string>
        <string name="el_juego_texto_text_view">EL JUEGO</string>
        <string name="sugerencia_texto_descripcion_layoutSuperior">Introduce tu correo electrónico. En el asunto indica
            el motivo de tu correo: sugerencia, bug, consejo, nuevo juego…, por ejemplo, Asunto: "Yo Nunca. Sugerencia",
            por último, rellena el apartado mensaje. Muchas gracias
por tu ayuda, de parte del equipo de Pingo aplicación.
</string>
        <string name="sugerencia_edit_text_mail">Escribe tu direccion de correo</string>
        <string name="sugerencia_edit_text_asunto">Juego. Sugerencia</string>
        <string name="sugerencia_edit_text_mensaje">Escribe tu sugerencia</string>
        <string name="sugerencia_text_view_mail">Email</string>
        <string name="sugerencia_text_view_asunto">Asunto</string>
        <string name="sugerencia_text_view_mensaje">Mensaje</string>
        <string name="sugerencia_boton_enviar">Enviar</string>
</resources>